--- a/product-specs.html
+++ b/product-specs.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title></title>
-	<link href="" rel="stylesheet" type="text/css" />
+	<title>Specs</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
 	<script src=""></script>
 	<meta name="viewport" content="width=device-width" />
 </head>
