--- a/template.html
+++ b/template.html
@@ -4,6 +4,7 @@
 <head>
     <title></title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="logo/logo.png" rel="icon" />
     <script src="scripts/page-gen.js"></script>
     <meta name="viewport" content="width=device-width" />
 </head>
