--- a/product-specs.html
+++ b/product-specs.html
@@ -1,11 +1,20 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-	<title>Specs</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
-	<script src=""></script>
-	<meta name="viewport" content="width=device-width" />
+    <title></title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="logo/logo.png" rel="icon" />
+    <script src="scripts/page-gen.js"></script>
+    <meta name="viewport" content="width=device-width" />
 </head>
+
 <body>
+    <header id="header"></header>
+    <main>
+        Your content goes here uwu
+    </main>
+    <footer id="footer"></footer>
 </body>
+
 </html>
