--- a/product-specs.html
+++ b/product-specs.html
@@ -1,11 +1,68 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Specs</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
-	<script src=""></script>
-	<meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='main.css' rel='stylesheet'>
+    <title>Product Specs</title>
 </head>
 <body>
+
+    <header>
+        <h1>Rosey, the Artifical Maid</h1>
+
+        <nav>
+            <ul>
+                <li>
+                    <a href='index.html'>Home</a>
+                </li>
+                <li>
+                    <a href='about.html'>About Us</a>
+                </li>
+                <li>
+                    <a href='specs.html'>Product Specs</a>
+                </li>
+                <li>
+                    <a href='contactUs.html'>Contact Us</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <section>
+        <h2>Product Specs</h2>
+        <table id='tbl'>
+
+            <tr class='trTbl'>
+                <td class='tdTbl'>Measurements: 120"x36"x36"</td>
+                <td class='tdTbl'>Weight: 4000 lbs</td>
+            </tr>
+            <tr class='trTbl'>
+                <td class='tdTbl'>Currently only available in silver, more colors coming soon</td>
+                <td class='tdTbl'>Price: $69,420</td>
+            </tr>
+            <tr class='trTbl'>
+                <td class='tdTbl'>Voice activated and voice recognition</td>
+                <td class='tdTbl'>Includes Bluetooth Speakers</td>
+            </tr>
+            <tr class='trTbl'>
+                <td class='tdTbl'>25/7.4 Hour customer support</td>
+                <td class='tdTbl'>Guaranteed 3.14 year warranty</td>
+            </tr>
+            <tr class='trTbl'>
+                <td class='tdTbl'>Easily replacable parts</td>
+                <td class='tdTbl'>Internal power supply incase of power outage</td>
+            </tr>
+            <tr class='trTbl'>
+                <td class='tdTbl'>Fully customizable folding settings</td>
+                <td class='tdTbl'>83.5% satisfaction guaranteed or your money back</td>
+            </tr>
+            <tr class='trTbl'>
+                <td class='tdTbl'>Virtually indestructable and will survive nuclear fallout</td>
+                <td class='tdTbl'>Shipping via Airdrop</td>
+            </tr>
+        </table>
+    </section>
+    <script src="specsScript.js"></script>
 </body>
 </html>
