I Added to the styling of the specs page so that the table looks a lot nicer

--- a/product-specs.html
+++ b/product-specs.html
@@ -18,36 +18,35 @@
         <table id='tbl'>
 
             <tr class='trTbl'>
-                <td class='tdTbl'>Measurements: 120"x36"x36"</td>
-                <td class='tdTbl'>Weight: 4000 lbs</td>
+                <td class='tdTblR'>Measurements: 120"x36"x36"</td>
+                <td class='tdTblL'>Weight: 4000 lbs</td>
             </tr>
             <tr class='trTbl'>
-                <td class='tdTbl'>Currently only available in silver, more colors coming soon</td>
-                <td class='tdTbl'>Price: $69,420</td>
+                <td class='tdTblR'>Currently only available in silver, more colors coming soon</td>
+                <td class='tdTblL'>Price: $69,420</td>
             </tr>
             <tr class='trTbl'>
-                <td class='tdTbl'>Voice activated and voice recognition</td>
-                <td class='tdTbl'>Includes Bluetooth Speakers</td>
+                <td class='tdTblR'>Voice activated and voice recognition</td>
+                <td class='tdTblL'>Includes Bluetooth Speakers</td>
             </tr>
             <tr class='trTbl'>
-                <td class='tdTbl'>25/7.4 Hour customer support</td>
-                <td class='tdTbl'>Guaranteed 3.14 year warranty</td>
+                <td class='tdTblR'>25/7.4 Hour customer support</td>
+                <td class='tdTblL'>Guaranteed 3.14 year warranty</td>
             </tr>
             <tr class='trTbl'>
-                <td class='tdTbl'>Easily replacable parts</td>
-                <td class='tdTbl'>Internal power supply incase of power outage</td>
+                <td class='tdTblR'>Easily replacable parts</td>
+                <td class='tdTblL'>Internal power supply incase of power outage</td>
             </tr>
             <tr class='trTbl'>
-                <td class='tdTbl'>Fully customizable folding settings</td>
-                <td class='tdTbl'>83.5% satisfaction guaranteed or your money back</td>
+                <td class='tdTblR'>Fully customizable folding settings</td>
+                <td class='tdTblL'>83.5% satisfaction guaranteed or your money back</td>
             </tr>
             <tr class='trTbl'>
-                <td class='tdTbl'>Virtually indestructable and will survive nuclear fallout</td>
+                <td class='tdTbl' id='tdad'>Virtually indestructable and will survive nuclear fallout</td>
                 <td class='tdTbl'>Shipping via Airdrop</td>
             </tr>
         </table>
     </main>
     <footer id="footer"></footer>
 </body>
-
 </html>
