--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
     <title></title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="logo/logo.png" rel="icon" />
     <script src="scripts/page-gen.js"></script>
-    <meta name="viewport" content="width=device-width" />
 </head>
 
 <body>
     <header id="header"></header>
     <main>
-        Your content goes here uwu
+        <h1 id="introducing-rosie"><span id="introducing">Introducing</span><br/><span id="rosie">Rosie</span></h1>
+        <div id="side-scrolling-image-container">
+            
+        </div>
     </main>
     <footer id="footer"></footer>
 </body>
