--- a/product-specs.html
+++ b/product-specs.html
@@ -2,11 +2,8 @@
 <html lang="en">
 
 <head>
-    <title></title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="logo/logo.png" rel="icon" />
+    <title>Product Specs</title>
     <script src="scripts/page-gen.js"></script>
-    <meta name="viewport" content="width=device-width" />
 
 </head>
 
