--- a/contact-us.html
+++ b/contact-us.html
@@ -2,14 +2,22 @@
 <html lang="en">
 
 <head>
-    <title></title>
+    <title>Contact Us</title>
     <script src="scripts/page-gen.js"></script>
 </head>
 
 <body>
     <header id="header"></header>
     <main>
-        Your content goes here uwu
+        <h1>Want to learn More?</h1>
+        <p>You can contact us Monday - Friday 9:00 AM - 7:00 PM</p>
+        <p>Address: P.O. Box 4242564</p>
+        <p>Shibuya, Japan 150-0044</p>
+        <p>Customer Service: 098-424-2564</p>
+    <h2>Quote of the Day!</h2>
+    <script type="text/javascript" src="https://theysaidso.com/gadgets/v3/theysaidso.js"></script>
+    <script>TheySaidSo.render({ quote_id : 'VsevE5h3LUUiZedYPKPwlweF'});</script>
+    <link href ="quote.JSON" rel="quote of the Day">    
     </main>
     <footer id="footer"></footer>
 </body>
