Added stuff to CSS

--- a/product-specs.html
+++ b/product-specs.html
@@ -14,36 +14,43 @@
 
     <header id="header"></header>
     <main>
-        <h2>Product Specs</h2>
+        <h2 id="pSpecs">Product Specs</h2>
+
+        <p id='about'>
+            sfakhgkdsjgk
+
+        </p>
+
         <table id='tbl'>
 
             <tr class='trTbl'>
-                <td class='tdTblR'>Measurements: 120"x36"x36"</td>
-                <td class='tdTblL'>Weight: 4000 lbs</td>
+                <td class='tdTblR'>Measurements:</td>
+                <td class='tdTblL'>120"x36"x36"</td>
+
             </tr>
             <tr class='trTbl'>
-                <td class='tdTblR'>Currently only available in silver, more colors coming soon</td>
-                <td class='tdTblL'>Price: $69,420</td>
+                <td class='tdTblR'>Weight:</td>
+                <td class='tdTblL'>4000 lbs</td>
             </tr>
             <tr class='trTbl'>
-                <td class='tdTblR'>Voice activated and voice recognition</td>
-                <td class='tdTblL'>Includes Bluetooth Speakers</td>
+                <td class='tdTblR'>Colors:</td>
+                <td class='tdTblL'>Currently only Silver, more coming soon</td>
             </tr>
             <tr class='trTbl'>
-                <td class='tdTblR'>25/7.4 Hour customer support</td>
-                <td class='tdTblL'>Guaranteed 3.14 year warranty</td>
+                <td class='tdTblR'>Customer Support:</td>
+                <td class='tdTblL'>25/7.4 Customer Support</td>
             </tr>
             <tr class='trTbl'>
-                <td class='tdTblR'>Easily replacable parts</td>
-                <td class='tdTblL'>Internal power supply incase of power outage</td>
+                <td class='tdTblR'>Power Supply:</td>
+                <td class='tdTblL'>Internal Power Supply incase of power outage, 10 hr life</td>
             </tr>
             <tr class='trTbl'>
-                <td class='tdTblR'>Fully customizable folding settings</td>
-                <td class='tdTblL'>83.5% satisfaction guaranteed or your money back</td>
+                <td class='tdTblR'>Folding options:</td>
+                <td class='tdTblL'>30+ folding settings for maximum personalization</td>
             </tr>
             <tr class='trTbl'>
-                <td class='tdTbl' id='tdad'>Virtually indestructable and will survive nuclear fallout</td>
-                <td class='tdTbl'>Shipping via Airdrop</td>
+                <td class='tdTbl' id='tdad'>Warranty:</td>
+                <td class='tdTbl'>3 year full coverage warranty</td>
             </tr>
         </table>
     </main>
