--- a/product-specs.html
+++ b/product-specs.html
@@ -2,8 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>Product Specs</title>
+    <title></title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="logo/logo.png" rel="icon" />
     <script src="scripts/page-gen.js"></script>
+    <meta name="viewport" content="width=device-width" />
 
 </head>
 
@@ -13,8 +16,15 @@
     <main>
         <h2 id="pSpecs">Product Specs</h2>
 
-        <p id='about'>
-            sfakhgkdsjgk
+        <p id='aboutSpecs'>
+            Rosie is a fully customizable clothes folding machine that will fold your clothes to your liking. From standard clothes folding,
+            American flag fold, to even custom settings, You can personalize Rosie to your complete liking. The way it works is you place in
+            your article of clothing face up (or face down if you want your clothes to be folded backwards like a weirdo) and it gets placed
+            in a conveyor belt. Once it's one the conveyor belt, you must then select the customization of how you want the conveyor belt to 
+            fold the article of clothing and it then will extend various robotic arms that will fold it to the setting chosen. "But won't it rip
+            my clothes?", you may ask, but if the robotic arms sense any tension past a certain thresh hold, it will then cease pulling to avoid
+            tearing the clothes. "This must take forever to do though," is probably what you say next. Well, I must inform you that it takes only (approximately, size may cause time to vary)
+            six seconds to fold your laundry, one article at a time of course.
 
         </p>
 
