--- a/contact-us.html
+++ b/contact-us.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Contact Us</title>
+    <link href="style.css" rel='stylesheet'/>
     <script src="scripts/page-gen.js"></script>
 </head>
 
