--- a/contact-us.html
+++ b/contact-us.html
@@ -4,18 +4,20 @@
 <head>
     <title>Contact Us</title>
     <link href="style.css" rel='stylesheet'/>
+    <link href='logo/logo.png' rel='icon' />
     <script src="scripts/page-gen.js"></script>
+    <meta name='viewport' content="width=device-width"/>
 </head>
 
-<body>
+<body id='inf'>
     <header id="header"></header>
     <main>
-        <h1>Want to learn More?</h1>
-        <p>You can contact us Monday - Friday 9:00 AM - 7:00 PM</p>
-        <p>Address: P.O. Box 4242564</p>
-        <p>Shibuya, Japan 150-0044</p>
-        <p>Customer Service: 098-424-2564</p>
-    <h2>Quote of the Day!</h2>
+        <h1 id='information'>Want to learn More?</h1>
+        <p id='time'>You can contact us Monday - Friday 9:00 AM - 7:00 PM</p>
+        <p id='address'>Address: P.O. Box 4242564</p>
+        <p id='address'>Shibuya, Japan 150-0044</p>
+        <p id='number'>Customer Service: 098-424-2564</p>
+    <h2 id='qOD'>Quote of the Day!</h2>
     <script type="text/javascript" src="https://theysaidso.com/gadgets/v3/theysaidso.js"></script>
     <script>TheySaidSo.render({ quote_id : 'VsevE5h3LUUiZedYPKPwlweF'});</script>
     <link href ="quote.JSON" rel="quote of the Day">    
