--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" id="index">
 
 <head>
     <title></title>
     <script src="scripts/page-gen.js"></script>
+    <script src="scripts/images.js"></script>
+    <script src="scripts/slideshow.js"></script>
 </head>
 
 <body>
@@ -11,7 +13,8 @@
     <main>
         <h1 id="introducing-rosie"><span id="introducing">Introducing</span><br/><span id="rosie">Rosie</span></h1>
         <div id="side-scrolling-image-container">
-            
+            <div id="current-slide-container"></div>
+            <div id="next-slide-container"></div>
         </div>
     </main>
     <footer id="footer"></footer>
