add light description

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header id="header"></header>
     <main>
         <h1 id="introducing-rosie"><span id="introducing">Introducing</span><br/><span id="rosie">Rosie</span></h1>
+        <p id="light-description">The automated garment-folding solution for your home or workplace.</p>
         <div id="side-scrolling-image-container">
             <div id="current-slide-container"></div>
             <div id="next-slide-container"></div>
