add buzzy content

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <div id="current-slide-container"></div>
             <div id="next-slide-container"></div>
         </div>
+        <p class="buzzy-content">Meet Rosie, the latest advance in the garment care industry. We bring innovations from automated machine tending to your laundering process, wrapped in a modular, versatile package. Our partnership with <a target="_blank" href="https://new.abb.com/products/robotics">ABB Robotics</a> has enabled us to incorporate cutting-edge precision mechanics and control algorithms from the forefront of underactuated dynamics research.</p>
+        <p class="buzzy-content">What does all this mean for your bottom line? Efficiency. Rosie is resilient, fast, and easily customizable. Skip post-processing and let Rosie handle your folding workflow end-to-end. 24/7 on-site support is included with every product, so you can stop worrying about downtime and focus on optimizing your process.</p>
     </main>
     <footer id="footer"></footer>
 </body>
