--- a/about-us.html
+++ b/about-us.html
@@ -1,15 +1,38 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" id="about-us">
 
 <head>
-    <title></title>
+    <title>About Us</title>
     <script src="scripts/page-gen.js"></script>
+    <script src="scripts/about-us.js"></script>
 </head>
 
 <body>
     <header id="header"></header>
     <main>
-        Your content goes here uwu
+        <p>Here at Rosie LLC, we are a small team of 4 talented individuals that put our minds together to think of
+            inventions to help mankind. Our focus is to think of products that can help people in their day to day
+            lives, such as our flagship product, the Clothes Folding Robot. There will be many more products later on in
+            the future and we have many ideas in the works all being tested to see which ones will benefit mankind the
+            most.</p>
+
+        <p>Many of our products, now and in the future, will aim to complete tasks that are seen as difficult, time
+            consuming or tedious. Our first invention was designed and built with that idea in mind, making folding
+            laundry as simple as putting your clean laundry next to it and it folds it for you. It can detect exactly
+            what type of garment it is and will fold it accordingly. Many of the products we have visions for will
+            follow the same idea of filling a need and will hopefully be in production in the near future. More
+            information will be posted as it is available so stay tuned.</p>
+        <div>
+            <div id="graphCanvas">
+                <div class="graphA" id="graphText">
+                    <p>Sales</p>
+                </div>
+                <div class="graphA" id="graphBorder"><canvas id="barGraph" width="800px" height="500px">
+                        Sales Vs Time
+                    </canvas>
+                </div>
+                <p id="sales">Sales Over Time</p>
+            </div id="graphCanvas">
     </main>
     <footer id="footer"></footer>
 </body>
